--- a/banking/src/main/resources/templates/login.html
+++ b/banking/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
     </div>
     <button> 로그인 </button>
 </form>
-<a href="/account/create">
+<a href="/users/create">
     <button> 회원 가입 </button>
 </a>
 </form>
