--- a/banking/src/main/resources/templates/account/create.html
+++ b/banking/src/main/resources/templates/account/create.html
@@ -1,37 +1,32 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header"></head>
+<head th:fragment="fragment-header"></head>
 <body>
 <div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader"></div>
-    <h1>회원가입</h1>
-    <form role="form" th:action="@{/loginUser}" th:object="${userForm}" method="post">
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+    <h1> 계좌 생성</h1>
+    <form role="form" th:action="@{|/account/create/${mid}|}" method="post">
+<!--        <input type="hidden" th:name="id" th:value="${member.id}" />-->
+<!--        th:for="accountAlias"-->
 
         <div class="form-group">
-            <label th:for="username">아이디</label>
-            <input type="text" th :field="*{username}" class="form-control" placeholder="아이디 입력해주세요">
+            <label>계좌번호 : </label>
+            <input type="text" class="form-control" placeholder="계좌번호">
         </div>
         <div class="form-group">
-            <label th:for="password">비밀번호</label>
-            <input type="password" class="form-control" th:field="*{password}" placeholder="비밀번호">
+            <label>비밀번호 : </label>
+            <input type="password" class="form-control" placeholder="비밀번호">
         </div>
         <div class="form-group">
-            <label th:for="email">이메일</label>
-            <input type="email" th:field="*{email}" class="form-control" placeholder="이메일 입력해주세요">
+            <label>은행사</label>
+            <input type="text" class="form-control" placeholder="이메일 입력해주세요">
         </div>
         <div class="form-group">
-            <label th:for="age">나이</label>
-            <input class="form-control" placeholder="나이를 입력하세요." th:field="*{age}" type="number">
+            <label>계좌이름</label>
+            <input class="form-control"  placeholder="나이를 입력하세요.">
         </div>
-        <div class="form-group">
-            <label th:for="role">권한</label>
-            <input class="form-control" placeholder="권한 입력하세요." th:field="*{role}" type="text">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">신규 계좌 생성</button>
     </form>
-    <br/>
-    <div th:replace="fragments/footer :: footer"></div>
+    </form>
 </div>
 </body>
 </html>
