--- a/banking/src/main/resources/templates/member/create.html
+++ b/banking/src/main/resources/templates/member/create.html
@@ -5,12 +5,12 @@
 <div class="container">
   <div th:replace="fragments/bodyHeader :: bodyHeader"></div>
   <h1>회원가입</h1>
-  <form role="form" th:action="@{/loginUser}" th:object="${userForm}" method="post">
+  <form role="form" th:action="@{|/member/create/${member.id}|}" th:object="${userForm}" method="post">
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
     <div class="form-group">
       <label th:for="username">아이디</label>
-      <input type="text" th :field="*{username}" class="form-control" placeholder="아이디 입력해주세요">
+      <input type="text" th:field="*{username}" class="form-control" placeholder="아이디 입력해주세요">
     </div>
     <div class="form-group">
       <label th:for="password">비밀번호</label>
