--- a/banking/src/main/resources/templates/account/create.html
+++ b/banking/src/main/resources/templates/account/create.html
@@ -1,28 +1,27 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html layout:decorate="~{layout}">
 <head th:fragment="fragment-header"></head>
 <body>
-<div class="container">
+<div layout:fragment="content" class="container my-3">
     <h1> 계좌 생성</h1>
-    <form role="form" th:action="@{|/account/create/${mid}|}" method="post">
-<!--        <input type="hidden" th:name="id" th:value="${member.id}" />-->
-<!--        th:for="accountAlias"-->
+    <form role="form" th:action="@{|/account/create/${mid}|}" th:object="${account}" method="post">
+<!--        <input type="hidden" th:name="${member.id}" th:value="${member.id}" />-->
 
         <div class="form-group">
-            <label>계좌번호 : </label>
-            <input type="text" class="form-control" placeholder="계좌번호">
+            <label th:for="accountNumber">계좌번호</label>
+            <input type="text" th:field="*{accountNumber}" class="form-control" placeholder="계좌번호">
         </div>
         <div class="form-group">
-            <label>비밀번호 : </label>
-            <input type="password" class="form-control" placeholder="비밀번호">
+            <label th:for="password">계좌 비밀번호</label>
+            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호">
         </div>
         <div class="form-group">
-            <label>은행사</label>
-            <input type="text" class="form-control" placeholder="이메일 입력해주세요">
+            <label th:for="bankName">은행사</label>
+            <input type="text" th:field="*{bankName}" class="form-control" placeholder="은행">
         </div>
         <div class="form-group">
-            <label>계좌이름</label>
-            <input class="form-control"  placeholder="나이를 입력하세요.">
+            <label th:for="accountAlias">계좌이름</label>
+            <input class="form-control" th:field="*{accountAlias}" placeholder="계좌이름을 정해주세요(선택사항)">
         </div>
         <button type="submit" class="btn btn-primary">신규 계좌 생성</button>
     </form>
