--- a/banking/src/main/resources/templates/member/create.html
+++ b/banking/src/main/resources/templates/member/create.html
@@ -1,37 +1,30 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header"></head>
+<html layout:decorate="~{layout}">
+<head th:fragment="fragment-header"></head>
 <body>
-<div class="container">
-  <div th:replace="fragments/bodyHeader :: bodyHeader"></div>
-  <h1>회원가입</h1>
-  <form role="form" th:action="@{|/member/create/${member.id}|}" th:object="${userForm}" method="post">
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+<div layout:fragment="content" class="container">
+  <h3 class="my-3 border-bottom pb-2"> 회원가입 </h3>
+  <form role="form" th:action="@{/member/create}" th:object="${member}" method="post">
+    <!--        <input type="hidden" th:name="${member.id}" th:value="${member.id}" />-->
 
     <div class="form-group">
-      <label th:for="username">아이디</label>
-      <input type="text" th:field="*{username}" class="form-control" placeholder="아이디 입력해주세요">
+      <label th:for="mid">ID</label>
+      <input type="text" th:field="*{mid}" class="form-control" placeholder="ID">
     </div>
     <div class="form-group">
       <label th:for="password">비밀번호</label>
-      <input type="password" class="form-control" th:field="*{password}" placeholder="비밀번호">
+      <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호">
+    </div>
+    <div class="form-group">
+      <label th:for="name">이름</label>
+      <input type="text" th:field="*{name}" class="form-control" placeholder="회원 이름">
     </div>
     <div class="form-group">
       <label th:for="email">이메일</label>
-      <input type="email" th:field="*{email}" class="form-control" placeholder="이메일 입력해주세요">
+      <input class="form-control" th:field="*{email}">
     </div>
-    <div class="form-group">
-      <label th:for="age">나이</label>
-      <input class="form-control" placeholder="나이를 입력하세요." th:field="*{age}" type="number">
-    </div>
-    <div class="form-group">
-      <label th:for="role">권한</label>
-      <input class="form-control" placeholder="권한 입력하세요." th:field="*{role}" type="text">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">신규 계좌 생성</button>
   </form>
-  <br/>
-  <div th:replace="fragments/footer :: footer"></div>
 </div>
 </body>
 </html>
