--- a/banking/src/main/resources/templates/account/create.html
+++ b/banking/src/main/resources/templates/account/create.html
@@ -5,7 +5,9 @@
 <div layout:fragment="content" class="container my-3">
     <h1> 계좌 생성</h1>
     <form role="form" th:action="@{|/account/create/${mid}|}" th:object="${account}" method="post">
-<!--        <input type="hidden" th:name="${member.id}" th:value="${member.id}" />-->
+        <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+            <div th:each="err : ${#fields.allErrors()}" th:text="${err}" />
+        </div>
 
         <div class="form-group">
             <label th:for="accountNumber">계좌번호</label>
