--- a/banking/src/main/resources/templates/member/create.html
+++ b/banking/src/main/resources/templates/member/create.html
@@ -5,16 +5,24 @@
 <div layout:fragment="content" class="container">
   <h3 class="my-3 border-bottom pb-2"> 회원가입 </h3>
   <form role="form" th:action="@{/member/create}" th:object="${member}" method="post">
-    <!--        <input type="hidden" th:name="${member.id}" th:value="${member.id}" />-->
+    <p> 에러 메시지를 확인해주세요 </p>
+    <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+      <div th:each="err : ${#fields.allErrors()}" th:text="${err}" />
+    </div>
 
     <div class="form-group">
       <label th:for="mid">ID</label>
       <input type="text" th:field="*{mid}" class="form-control" placeholder="ID">
     </div>
+    <div class="alert alert-danger" th:if="${#fields.hasErrors('id')}">
+      <div th:each="err : ${#fields.errors('id')}" th:text="${err}" />
+    </div>
+
     <div class="form-group">
       <label th:for="password">비밀번호</label>
       <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호">
     </div>
+
     <div class="form-group">
       <label th:for="name">이름</label>
       <input type="text" th:field="*{name}" class="form-control" placeholder="회원 이름">
