feature 회원 가입과 중복에 대한 예외 처리 추가
account는 form으로 받게 변경

--- a/banking/src/main/resources/templates/account/create.html
+++ b/banking/src/main/resources/templates/account/create.html
@@ -4,24 +4,29 @@
 <body>
 <div layout:fragment="content" class="container my-3">
     <h1> 계좌 생성</h1>
-    <form role="form" th:action="@{|/account/create/${mid}|}" th:object="${account}" method="post">
+    <form role="form" th:action="@{|/account/create/${mid}|}" th:object="${accountCreateForm}" method="post">
         <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+            <p> 에러 메시지를 확인해주세요 </p>
             <div th:each="err : ${#fields.allErrors()}" th:text="${err}" />
         </div>
 
-        <div class="form-group">
+        <div class="mb-3">
             <label th:for="accountNumber">계좌번호</label>
             <input type="text" th:field="*{accountNumber}" class="form-control" placeholder="계좌번호">
         </div>
-        <div class="form-group">
-            <label th:for="password">계좌 비밀번호</label>
-            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호">
+        <div class="mb-3">
+            <label th:for="password1">계좌 비밀번호</label>
+            <input type="password" th:field="*{password1}" class="form-control" placeholder="비밀번호 입력해주세요">
         </div>
-        <div class="form-group">
+        <div class="mb-3">
+            <label th:for="password2">계좌 비밀번호 확인</label>
+            <input type="password" th:field="*{password2}" class="form-control" placeholder="비밀번호를 재입력해주세요">
+        </div>
+        <div class="mb-3">
             <label th:for="bankName">은행사</label>
             <input type="text" th:field="*{bankName}" class="form-control" placeholder="은행">
         </div>
-        <div class="form-group">
+        <div class="mb-3">
             <label th:for="accountAlias">계좌이름</label>
             <input class="form-control" th:field="*{accountAlias}" placeholder="계좌이름을 정해주세요(선택사항)">
         </div>
