--- a/banking/src/main/resources/templates/login.html
+++ b/banking/src/main/resources/templates/login.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Banking Main</title>
-</head>
+<html layout:decorate="~{layout}">
+<head th:fragment="fragment-header"></head>
 <body>
-<form action="main" method="POST">
-    <div>
-        아이디: <input name="id" type="text">
-    </div>
-    <div>
-        비밀번호: <input name="password" type="password">
-    </div>
-    <button> 로그인 </button>
-</form>
-<a href="/member/create">
-    <button> 회원 가입 </button>
-</a>
-</form>
+<div layout:fragment="content" class="container my-3">
+    <form th:action="@{/member/login}"  method="post">
+        <div th:if="${param.error}">
+            <div class="alert alert-danger">
+                사용자ID 또는 비밀번호를 확인해 주세요.
+            </div>
+        </div>
+        <div class="mb-3">
+            <label for="username" class="form-label">사용자ID</label>
+            <input type="text" name="username" id="username" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">비밀번호</label>
+            <input type="password" name="password" id="password" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-primary">로그인</button>
+    </form>
+    <a href="/member/create">
+        <button> 회원 가입 </button>
+    </a>
+</div>
 </body>
 </html>
