feature 로그인 & 로그아웃 개발 완료
인증 정보가 있을 경우 메인으로 넘어가고
그 외에의 경우 로그인 화면으로 넘어가게 구현
추가로 기존에 mid를 받던 부분 삭제하고 인증정보를 넘기게 변경

--- a/banking/src/main/resources/templates/account/create.html
+++ b/banking/src/main/resources/templates/account/create.html
@@ -4,7 +4,7 @@
 <body>
 <div layout:fragment="content" class="container my-3">
     <h1> 계좌 생성</h1>
-    <form role="form" th:action="@{|/account/create/${mid}|}" th:object="${accountCreateForm}" method="post">
+    <form role="form" th:action="@{/account/create}" th:object="${accountCreateForm}" method="post">
         <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
             <p> 에러 메시지를 확인해주세요 </p>
             <div th:each="err : ${#fields.allErrors()}" th:text="${err}" />
