--- a/banking/src/main/resources/templates/main.html
+++ b/banking/src/main/resources/templates/main.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html layout:decorate="~{layout}">
+<head th:fragment="fragment-header"></head>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-Main 페이지 입니다.
-추후에 꾸밀 예정
+<div>
+Main 페이지 입니다.<br>
+</div>
 </body>
 </html>
