--- a/banking/src/main/resources/templates/layout.html
+++ b/banking/src/main/resources/templates/layout.html
@@ -11,6 +11,8 @@
   <title>Seungho Banking</title>
 </head>
 <body>
+<!-- 네비게이션바 -->
+<nav th:replace="~{navbar :: navbarFragment}"></nav>
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
 <th:block layout:fragment="content"></th:block>
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
