--- a/banking/src/main/resources/templates/member/detail.html
+++ b/banking/src/main/resources/templates/member/detail.html
@@ -10,11 +10,12 @@
 </h1>
 <!--<textarea "[헤드 테스트] 정보입니다."></textarea>-->
 <div> 이름 : <span th:text="${member.name}"></span> </div>
-<div> 패스워드 : <span th:text="${member.password}"></span> </div>
+<!--<div> 패스워드 : <span th:text="${member.password}"></span> </div>-->
 <div> 생성날 : <span th:text="${member.createDate}"></span> </div>
-<a th:href="@{|/account/create/${member.id}|}">
+<a th:href="@{/account/create}">
     <button> 계좌 생성 </button>
-<a th:href="@{|/account/list/${member.id}|}">
+</a>
+<a th:href="@{/account/list}">
     <button> 계좌 리스트 확인 </button>
 </a>
 </body>
