--- a/banking/src/main/resources/templates/navbar.html
+++ b/banking/src/main/resources/templates/navbar.html
@@ -9,11 +9,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/member/login}">로그인</a>
+          <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/member/login}">로그인</a>
+          <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/member/logout}">로그아웃</a>
         </li>
-<!--        <li class="nav-item">-->
-<!--          <a class="nav-link" th:href="@{/member/signup}"></a>-->
-<!--        </li>-->
+        <li class="nav-item">
+          <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/member/detail}">계정정보</a>
+        </li>
       </ul>
     </div>
   </div>
